# fsw_debug_sads_V1

MTi-03_Communication/: xbus_mti03  xbus_mti03.cpp
MTi-03_FSW/: CMakeLists.txt  main.cpp
RW_Communication/esp32/: Driver.cpp  Driver.h  MotorController.cpp  MotorController.h  Shares.h  main.cpp
RW_Communication/pi/: CMakeLists.txt  README.md  i2c_rw.cpp  i2c_rw.h  main.cpp
SADS_FSW/: CMakeLists.txt  README.md  control_task_1axis.cpp  control_task_torque_ramp.cpp  estimator_task_noEuler.cpp  server_task_noEuler.cpp  shared_state_noEuler.h
SADS_FSW/0.001 Nm Torque, 500 rpms/: Makefile  sads_fsw
SADS_FSW/0.005 Nm Torque, 500 rpms/: CMakeCache.txt  cmake_install.cmake  sads_fsw
SADS_FSW/0.01 Nm Torque, 500 rpms/: sads_fsw
SADS_FSW/0.05 Nm Torque, 500 rpms/: CMakeCache.txt  Makefile  cmake_install.cmake  sads_fsw
SADS_FSW/1-Axis PD Controller, Zeta = 0.7/: sads_fsw
SADS_FSW/1-Axis PD Controller, Zeta = 1/: sads_fsw
SADS_FSW/src/: ._comm_task.cpp  ._control_task.cpp  ._i2c_rw.cpp  ._i2c_rw.h  ._main.cpp  ._rw_bus.h  ._shared_state.h  comm_task.cpp  control_task.cpp  estimator_task.cpp  i2c_rw.cpp  i2c_rw.h  imu_task.cpp  main.cpp  mti03_driver.cpp  mti03_driver.h  rw_bus.h  server_task.cpp  shared_state.h  timing.h
SADS_FSW/web/: index.html  plots.js  style.css
